# hpcrun

./: README.md  hpcrun-reload  hpcrun-setup  pyproject.toml  setup.cfg
hpcrun/: cli.py  config.py  main.py  shared.py  submission.py  utils.py
hpcrun/database/programspecs/: vasp.json
